--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "main": "server.js",
     "mongoose": "^6.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-tinder-card": "^1.4.5",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.1.2",
-    "main": "server.js"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
